SIP-5920: Tablet mode alignment issue

--- a/saw-web/src/app/modules/analyze/designer/layout/single-table/single-table-designer-layout.component.scss
+++ b/saw-web/src/app/modules/analyze/designer/layout/single-table/single-table-designer-layout.component.scss
@@ -27,6 +27,8 @@
 
 .settings-drawer {
   width: 333px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .analysis-content {
